# ffmpeg_test

./: CMakeLists.txt  main.cpp
bad/: main.cpp
